Fixed overflow scroll bug

--- a/frontend-kiosco-angular/src/app/pages/options-page/options-page.component.css
+++ b/frontend-kiosco-angular/src/app/pages/options-page/options-page.component.css
@@ -3,7 +3,7 @@ section.opts-page{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 .advert{
