--- a/frontend-kiosco-angular/src/styles.css
+++ b/frontend-kiosco-angular/src/styles.css
@@ -48,10 +48,11 @@
 
 body{
     font-family: "Poppins", sans-serif;
-    /* height: 1920px; */
+    max-height: 100vh;
     min-height: 100vh;
     width: 100vw;
     margin: 0px;
+    overflow: hidden;
 }
 
 button {
